# fastapi-tutorial-project

./: .coverage  README.md  main.py  pyproject.toml
tests/: test_main_b.py
