[project]
name = "fastapi-tutorial-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.mypy]
# 基本設定
python_version = "3.13"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",
    "COM812",
    "ISC001",
]
unfixable = [
    "F401",
    "F841",
]
pydocstyle.convention = "google" 

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S101",
    "N802",
    "ARG",
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
